--- a/iceland.html
+++ b/iceland.html
@@ -76,6 +76,16 @@
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a href="#" class="special">Learn more</a>
 											</article>
+											<article class="feature hidden">
+												<h3 class="major">Nisl placerat</h3>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+												<a href="#" class="special">Learn more</a>
+											</article>
+											<article class="feature hidden">
+												<h3 class="major">Nisl placerat</h3>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+												<a href="#" class="special">Learn more</a>
+											</article>
 										</div>
 									</div>
 									<div class="content">
@@ -101,13 +111,11 @@
 										<a href="#" class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
-												<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a href="#" class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
-												<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a href="#" class="special">Learn more</a>
