--- a/iceland.html
+++ b/iceland.html
@@ -64,78 +64,78 @@
 									<div class="content">
 										<h2 class="major">Check for Unexpected Weather</h2>
 										<p>Please check the forcast of the places you travel to for sporatic and rough weather.</p>
-										<a href="#" class="special seemore">See more</a>
+										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
 									<div class="content">
 										<h2 class="major">Watch for Dangers on the Road</h2>
 										<p>Please take precautions on the road and keep away from oncoming traffic, animals and weather conditions.</p>
-										<a href="#" class="special seemore">See more</a>
+										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
 									<div class="content hidden">
 										<h2 class="major">Preserve the Natural Environment</h2>
 										<p>Please preserve Icelandic moss as it is delicate and takes hundreds of years to grow back.</p>
-										<a href="#" class="special seemore">See more</a>
+										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
 									<div class="content hidden">
 										<h2 class="major">Don't Hesitate to Ask Locals</h2>
 										<p>Please ask locals for help and information about Iceland throughout your stay.</p>
-										<a href="#" class="special seemore">See more</a>
+										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 											<article class="feature hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a href="#" class="special">Learn more</a>
+												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
