--- a/iceland.html
+++ b/iceland.html
@@ -67,7 +67,7 @@
 										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature hidden">
-												<h3 class="major">Sed feugiat lorem</h3>
+												<h3 class="major">Reykjavík</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
