--- a/iceland.html
+++ b/iceland.html
@@ -14,6 +14,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/animate.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -25,9 +26,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="iceland.html">Logn Iceland</a></h1>
+						<h1><a target="_blank" href="iceland.html">Logn Iceland</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a target="_blank" href="#menu">Menu</a>
 						</nav>
 					</header>
 
@@ -36,18 +37,15 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="home.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a target="_blank" href="http://lognweb.herokuapp.com/iceland.html">Open this page in the browser</a></li>
+								<li><a target="_blank" href="http://lognweb.herokuapp.com">Logn Home</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner">
+					<section id="banner" class="animated bgshrink">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-diamond"></span></div> -->
 							<h2>Welcome to Iceland</h2>
@@ -60,90 +58,89 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-									<div class="content">
+									<div class="content animated fadeIn">
 										<h2 class="major">Check for Unexpected Weather</h2>
 										<p>Please check the forcast of the places you travel to for sporatic and rough weather.</p>
 										<a class="special seemore">See more</a>
 										<div class="features">
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Reykjavík</h3>
 												<p><?php 
-                                                                                                    #weather
-                                                                                                    $response = file_get_contents('https://apis.is/weather/forecasts/en?stations=1');
-                                                                                                    $forecast = json_decode($response, true);
-                                                                                                    # "F" = windspeed, "FG" = top wind, "D" = direction of wind, "T" = temperature, "W" = weather disciption, "N" = cloud percentage, "R" = rain amount, more info: http://www.vedur.is/media/vedurstofan/XML-thjonusta.pdf
-                                                                                                    $time = 3;
-                                                                                                    echo "The weather in Reykjavík at ".gmdate('H:i, d. M Y',strtotime($forecast['results'][0]['forecast'][$time]['ftime'])).":<br>";
-                                                                                                    echo $forecast['results'][0]['forecast'][$time]['T']." °C, ".$forecast['results'][0]['forecast'][$time]['F']." m/s and ".strtolower($forecast['results'][0]['forecast'][$time]['W']);
-                                                                                                    echo "<br>with ".$forecast['results'][0]['forecast'][$time]['R']." mm/hour of rain";
-                                                                                                    echo "<br>";
-                                                                                                    
-                                                                                                    ?></p>
+                                                    #weather
+                                                    $response = file_get_contents('https://apis.is/weather/forecasts/en?stations=1');
+                                                    $forecast = json_decode($response, true);
+                                                    # "F" = windspeed, "FG" = top wind, "D" = direction of wind, "T" = temperature, "W" = weather disciption, "N" = cloud percentage, "R" = rain amount, more info: http://www.vedur.is/media/vedurstofan/XML-thjonusta.pdf
+                                                    $time = 3;
+                                                    echo "The weather in Reykjavík at ".gmdate('H:i, d. M Y',strtotime($forecast['results'][0]['forecast'][$time]['ftime'])).":<br>";
+                                                    echo $forecast['results'][0]['forecast'][$time]['T']." °C, ".$forecast['results'][0]['forecast'][$time]['F']." m/s and ".strtolower($forecast['results'][0]['forecast'][$time]['W']);
+                                                    echo "<br>with ".$forecast['results'][0]['forecast'][$time]['R']." mm/hour of rain";
+                                                    echo "<br>";
+                                                    ?>
+                                                </p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
-									<div class="content">
+									<div class="content animated fadeIn">
 										<h2 class="major">Watch for Dangers on the Road</h2>
 										<p>Please take precautions on the road and keep away from oncoming traffic, animals and weather conditions.</p>
 										<a class="special seemore">See more</a>
 										<div class="features">
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
-									<div class="content hidden">
+									<div class="content animated fadeIn hidden">
 										<h2 class="major">Preserve the Natural Environment</h2>
 										<p>Please preserve Icelandic moss as it is delicate and takes hundreds of years to grow back.</p>
 										<a class="special seemore">See more</a>
 										<div class="features">
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
 										</div>
 									</div>
-									<div class="content hidden">
+									<div class="content animated fadeIn hidden">
 										<h2 class="major">Don't Hesitate to Ask Locals</h2>
 										<p>Please ask locals for help and information about Iceland throughout your stay.</p>
 										<a class="special seemore">See more</a>
 										<div class="features">
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Sed feugiat lorem</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
 											</article>
-											<article class="feature hidden">
+											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 												<a class="special">Learn more</a>
@@ -160,7 +157,7 @@
 					<section id="footer">
 						<div class="inner">
 							<p>
-								Have a safe stay in Iceland. To see these tips again please visit <a href="https://lognweb.herokuapp.com/iceland.html">logn.com/iceland</a>. 
+								Have a safe stay in Iceland. To see these tips again please visit <a target="_blank" href="https://lognweb.herokuapp.com/iceland.html">logn.com/iceland</a>. 
 							</p>
 							<form method="post" action="/captiveportal/index.php" onsubmit="redirect()">
 								<ul class="actions">
@@ -168,21 +165,9 @@
 									<button type="submit">Sign into WiFi</button>
 								</ul>
 							</form>
-							<!-- <ul class="contact">
-								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul> -->
 							<ul class="copyright">
-								<li>To add your tips and your business to Logn, contact us at <a href="https://lognweb.herokuapp.com">logn.com</a></li>
-								<li>&copy; Logn Inc. All rights reserved. Design: <a href="http://html5up.net">HTML5 UP</a>. Mods: <a href="www.arjunkalburgi.com">ASKalburgi</a></li>
+								<li>To add your tips and your business to Logn, contact us at <a target="_blank" href="https://lognweb.herokuapp.com">logn.com</a></li>
+								<li>&copy; Logn Inc. All rights reserved. Design: <a target="_blank" href="http://html5up.net">HTML5 UP</a>. Mods: <a target="_blank" href="www.arjunkalburgi.com">ASKalburgi</a></li>
 							</ul>
 						</div>
 					</section>
