--- a/iceland.html
+++ b/iceland.html
@@ -61,28 +61,29 @@
 									<div class="content animated fadeIn">
 										<h2 class="major">Check for Unexpected Weather</h2>
 										<p>Please check the forcast of the places you travel to for sporatic and rough weather.</p>
-										<a class="special seemore">See more</a>
+                                                                                <a class="special seemore">See more</a>
 										<div class="features">
 											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Reykjavík</h3>
-												<p><?php 
-                                                    #weather
-                                                    $response = file_get_contents('https://apis.is/weather/forecasts/en?stations=1');
-                                                    $forecast = json_decode($response, true);
-                                                    # "F" = windspeed, "FG" = top wind, "D" = direction of wind, "T" = temperature, "W" = weather disciption, "N" = cloud percentage, "R" = rain amount, more info: http://www.vedur.is/media/vedurstofan/XML-thjonusta.pdf
-                                                    $time = 6;
-                                                    echo "The weather in Reykjavík at ".gmdate('H:i, d. M Y',strtotime($forecast['results'][0]['forecast'][$time]['ftime'])).":<br>";
-                                                    echo $forecast['results'][0]['forecast'][$time]['T']." °C, ".$forecast['results'][0]['forecast'][$time]['F']." m/s and ".strtolower($forecast['results'][0]['forecast'][$time]['W']);
-                                                    echo "<br>with ".$forecast['results'][0]['forecast'][$time]['R']." mm/hour of rain";
-                                                    echo "<br>";
-                                                    ?>
-                                                </p>
+												<p>
+                                                                                                        <?php 
+													#weather
+													$response = file_get_contents('https://apis.is/weather/forecasts/en?stations=1');
+													$forecast = json_decode($response, true);
+													# "F" = windspeed, "FG" = top wind, "D" = direction of wind, "T" = temperature, "W" = weather disciption, "N" = cloud percentage, "R" = rain amount, more info: http://www.vedur.is/media/vedurstofan/XML-thjonusta.pdf
+													$time = 6;
+													echo "The weather in Reykjavík at ".gmdate('H:i, d. M Y',strtotime($forecast['results'][0]['forecast'][$time]['ftime'])).":<br>";
+													echo $forecast['results'][0]['forecast'][$time]['T']." °C, ".$forecast['results'][0]['forecast'][$time]['F']." m/s and ".strtolower($forecast['results'][0]['forecast'][$time]['W']);
+													echo "<br>with ".$forecast['results'][0]['forecast'][$time]['R']." mm/hour of rain";
+													echo "<br>";
+													?>
+												</p>
 												<a class="special">Learn more</a>
 											</article>
 											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-												<a class="special">Learn more</a>
+                                                                                                <p>KKKKKKKK<p>
+                                                                                                <a class="special">Learn more</a>
 											</article>
 											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Nisl placerat</h3>
