--- a/iceland.html
+++ b/iceland.html
@@ -1,4 +1,5 @@
-<?php $destination = "http://". $_SERVER['HTTP_HOST'] . $_SERVER['HTTP_URI'] . ""; ?>
+<?php # $destination = "http://". $_SERVER['HTTP_HOST'] . $_SERVER['HTTP_URI'] . ""; ?>
+<?php # $destination = "http://lognweb.herokuapp.com/iceland.html"; ?>
 <!-- <!DOCTYPE HTML> -->
 <!--
 	Solid State by HTML5 UP
