--- a/iceland.html
+++ b/iceland.html
@@ -61,6 +61,7 @@
 									<div class="content animated fadeIn">
 										<h2 class="major">Check for Unexpected Weather</h2>
 										<p class="contentdesc">Please check the forcast of the places you travel to for sporatic and rough weather.</p>
+										<a class="special seemore">See more</a>
 										<div class="features">
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
@@ -82,7 +83,6 @@
 													<a href="#">This is a link</a>
 												</div>
 											</article>
-<<<<<<< HEAD
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
 													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
@@ -91,7 +91,7 @@
 													<a href="#">This is a link</a>
 													<a href="#">This is a link</a>
 												</div>
-=======
+											</article>
 											<article class="feature animated fadeInRight hidden">
 												<h3 class="major">Concerta</h3>
 												<p>
@@ -103,12 +103,10 @@
 														echo "Next concert in Iceland is ".$concerts['results'][$x]["eventDateName"]." and is in ".$concerts['results'][$x]["eventHallName"]." at ".gmdate('H:i, d. M Y',strtotime($concerts['results'][$x]["dateOfShow"]));
 														echo "<br>";
 														echo "<img src=".$concerts['results'][$x]['imageSource']." alt='Concert picture'>";
-														
 													?>
 												<p>
-                                                                                                <a class="special">Learn more</a>
->>>>>>> 932d9a63a77fc720304d2ac62774cc478fc02578
-											</article>
+                                                <a class="special">Learn more</a>
+                                            </article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
 													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
