--- a/iceland.html
+++ b/iceland.html
@@ -92,7 +92,7 @@
 													<a href="#">This is a link</a>
 												</div>
 											</article>
-											<article class="feature animated fadeInRight hidden">
+											<article class="card small animated fadeInRight hidden">
 												<h3 class="major">Concerta</h3>
 												<p>
 													<?php
