--- a/iceland.html
+++ b/iceland.html
@@ -65,7 +65,7 @@
 										<div class="features">
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Reykjavík</span>
+													<span class="card-title activator grey-text text-darken-4">Weather in Reykjavík</span>
 													<p><?php 
 														#weather
 														$response = file_get_contents('https://apis.is/weather/forecasts/en?stations=1');
@@ -79,50 +79,43 @@
 														?></p>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
-												</div>
-												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
-												</div>
-											</article>
-											<article class="card small animated fadeInRight hidden">
-												<h3 class="major">Concerta</h3>
-												<p>
-													<?php
-														#concerts
-														$response = file_get_contents('https://apis.is/concerts');
-														$concerts = json_decode($response, true);
-														$x = 0; #number of upcoming conert, could loop through a bunch if needed
-														echo "Next concert in Iceland is ".$concerts['results'][$x]["eventDateName"]." and is in ".$concerts['results'][$x]["eventHallName"]." at ".gmdate('H:i, d. M Y',strtotime($concerts['results'][$x]["dateOfShow"]));
-														echo "<br>";
-														echo "<img src=".$concerts['results'][$x]['imageSource']." alt='Concert picture'>";
-													?>
-												<p>
-                                                <a class="special">Learn more</a>
-                                            </article>
+														<span class="card-title activator grey-text text-darken-4">Concerta</span>
+														<p>
+															<?php
+															#concerts
+															$response = file_get_contents('https://apis.is/concerts');
+															$concerts = json_decode($response, true);
+															$x = 0; #number of upcoming conert, could loop through a bunch if needed
+															echo "Next concert in Iceland is ".$concerts['results'][$x]["eventDateName"]." and is in ".$concerts['results'][$x]["eventHallName"]." at ".gmdate('H:i, d. M Y',strtotime($concerts['results'][$x]["dateOfShow"]));
+															echo "<br>";
+															echo "<img src=".$concerts['results'][$x]['imageSource']." alt='Concert picture'>";
+															?>
+														</p>
+													</div>
+													<div class="card-action">
+														<a href="#">Advert>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
+													<span class="card-title activator grey-text text-darken-4">This is an ad :)</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
+													<span class="card-title activator grey-text text-darken-4">This is an ad :)</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 										</div>
@@ -137,17 +130,17 @@
 													<span class="card-title activator grey-text text-darken-4">Sed feugiat lorem</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
+													<span class="card-title activator grey-text text-darken-4">This is an ad :)</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 										</div>
@@ -162,17 +155,17 @@
 													<span class="card-title activator grey-text text-darken-4">Sed feugiat lorem</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
+													<span class="card-title activator grey-text text-darken-4">This is an ad :)</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 										</div>
@@ -187,17 +180,17 @@
 													<span class="card-title activator grey-text text-darken-4">Sed feugiat lorem</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 											<article class="card small animated fadeInRight hidden">
 												<div class="card-content">
-													<span class="card-title activator grey-text text-darken-4">Nisl placerat</span>
+													<span class="card-title activator grey-text text-darken-4">This is an ad :)</span>
 												</div>
 												<div class="card-action">
-													<a href="#">This is a link</a>
-													<a href="#">This is a link</a>
+													<a href="#">Advert link</a>
+													<a href="#">Advert link</a>
 												</div>
 											</article>
 										</div>
